# llm-wiki

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  ingest.log.bak  requirements.txt  setup.bat  start-dev.bat  start-prod.bat  t; git add -A; git commit -m fix(v2) synthesis API 权限修复 + Depends 导入
api/: database.py  dependencies.py  main.py  pyproject.toml
api/middleware/: __init__.py  auth.py
api/models/: __init__.py  log.py  user.py
api/routers/: __init__.py  auth.py  config.py  graph.py  ingest.py  logs.py  maintenance.py  pages.py  pdf.py  raw.py  search.py  synthesis.py  users.py
api/schemas/: __init__.py  log.py  user.py
api/services/: __init__.py  auth.py  log_service.py
docs/: CHANGELOG_20260427.md  CHANGELOG_20260429.md  CHANGELOG_20260502.md  CHANGELOG_20260503.md  CHANGELOG_20260509.md  CHANGELOG_20260510.md  V2-development-plan.md  V2-requirements.md  V3-development-plan.md  V3-requirements.md  api-reference.md  architecture.md  deployment.md  使用说明书.md  改进计划_20260502.md  文章录入流程设计_v1.md
index/: index_report.json
scripts/: __init__.py  agent_g.py  batch.py  citation_tracer.py  clean_orphans.py  clean_unreferenced.py  compare.py  config_loader.py  conflict_detector.py  embedding.py  embedding_bge.py  extract_images.py  gen_faqs.py  indexer.py  indexer_simple.py  lint.py  merge.py  pdf_converter.py  postprocess_links.py  qdrant_indexer.py  qdrant_search.py  qmd_search_simple.py  review.py  review_compare.py  review_survey.py  survey.py  version_control.py
templates/: concept.md  entity.md  paper.md  summary.md  synthesis.md
(+39 files in other folders)
